--- a/index.html
+++ b/index.html
@@ -3,96 +3,391 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>STOLAR CARP</title>
+  <title>STOLAR CARP — офіційний сайт турнірів</title>
+
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="apple-touch-icon" href="assets/favicon.png">
+  <meta name="theme-color" content="#1a1a1a">
 
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
 
   <style>
-    .hero{
-      padding:26px 0 14px;
+    body.home-page{
+      background:
+        radial-gradient(circle at top,#111827 0,#020617 55%);
     }
-    .kicker{
+
+    .hero-main{
+      max-width:980px;
+      margin:0 auto;
+      padding:70px 0 60px;
+      text-align:center;
+    }
+
+    .hero-kicker{
       display:inline-flex;
       align-items:center;
       gap:8px;
-      font-size:12px;
-      text-transform:uppercase;
-      letter-spacing:.12em;
-      color:#fcd34d;
-      background:rgba(252,211,77,.08);
+      padding:4px 12px;
       border-radius:999px;
-      padding:5px 12px;
-      border:1px solid rgba(252,211,77,.35);
-      width:fit-content;
+      font-size:.75rem;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+      background:rgba(0,0,0,.6);
+      border:1px solid rgba(148,163,184,.5);
+      color:#e5e7eb;
+      margin-bottom:14px;
+      margin-left:89px;
     }
-    .dot{
-      width:8px;height:8px;border-radius:50%;
-      background:#ef4444;
-      box-shadow:0 0 10px rgba(239,68,68,.9);
+
+    .hero-kicker-icon{
+      width:20px;
+      height:20px;
+      border-radius:50%;
+      flex-shrink:0;
+      background:url('assets/fish-gold.png') center/cover no-repeat;
     }
-    .title-gradient{
-      margin:14px 0 10px;
-      font-size:clamp(30px,5vw,44px);
-      line-height:1.08;
-      background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 35%,#7a0f2b 100%);
+
+    .hero-kicker-text{
+      font-size:.75rem;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+    }
+
+    /* Головний логотип STOLAR CARP */
+    .hero-title{
+      position:relative;
+      z-index:1;
+      font-size:clamp(40px,7vw,64px);
+      font-weight:900;
+      letter-spacing:.06em;
+      margin:0 0 36px;
+      text-transform:uppercase;
+
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 40%,#d90429 100%);
       -webkit-background-clip:text;
       background-clip:text;
       color:transparent;
+
+      text-shadow:
+        0 1px 0 rgba(255,255,255,0.3),
+        0 2px 0 rgba(140,90,0,0.9),
+        0 5px 10px rgba(0,0,0,0.85);
+
+      opacity:0;
+      transform:translateY(14px);
+      animation:heroTitleFade 0.9s ease-out forwards;
     }
-    .lead{
-      color:var(--muted);
-      max-width:780px;
-      margin:0 0 18px;
-      font-size:15px;
-      line-height:1.5;
+
+    /* Підсвітка фону позаду STOLAR CARP */
+    .hero-title::before{
+      content:"";
+      position:absolute;
+      z-index:-1;
+      left:50%;
+      top:50%;
+      transform:translate(-50%,-50%);
+
+      width:340px;
+      height:110px;
+
+      background:
+        radial-gradient(circle at 50% 40%,
+          rgba(255,215,0,0.28) 0%,
+          rgba(255,140,0,0.18) 35%,
+          rgba(217,4,41,0.14) 60%,
+          transparent 80%);
+
+      filter:blur(16px);
+      opacity:0;
+      pointer-events:none;
+      animation:heroGlow 1.1s ease-out forwards 0.1s;
     }
-    .cards{
-      display:grid;
-      grid-template-columns:repeat(3,1fr);
-      gap:14px;
-      margin-top:14px;
-    }
-    @media (max-width: 980px){
-      .cards{grid-template-columns:1fr;}
-    }
-    .card-link{
-      display:block;
-      text-decoration:none;
-      color:inherit;
-    }
-    .card h3{
-      margin:0 0 6px;
-    }
-    .card p{
-      margin:0;
-      color:var(--muted);
-      font-size:13.5px;
-      line-height:1.45;
-    }
-    .pill{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      padding:6px 10px;
+
+    /* Лінія під STOLAR CARP */
+    .hero-title::after{
+      content:"";
+      position:absolute;
+      left:50%;
+      transform:translateX(-50%);
+      bottom:-14px;
+
+      width:240px;
+      height:3px;
       border-radius:999px;
-      border:1px solid rgba(148,163,184,.25);
-      background:rgba(2,6,23,.35);
-      color:#cbd5e1;
-      font-size:12px;
+
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 50%,#d90429 100%);
+      box-shadow:0 0 6px rgba(255,180,0,.6);
+
+      opacity:0;
+      animation:heroLineFade 1.1s ease-out forwards;
     }
-    .hero-row{
+
+    .hero-subtitle{
+      margin:14px auto 0;
+      max-width:640px;
+      color:#d1d5db;
+      font-size:1.02rem;
+    }
+
+    .hero-tags{
+      margin-top:18px;
       display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
       flex-wrap:wrap;
-      margin-top:10px;
+      gap:8px;
+      justify-content:center;
+    }
+    .hero-tag{
+      padding:4px 12px;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.55);
+      font-size:.8rem;
+      color:#e5e7eb;
+      background:rgba(15,23,42,.9);
+    }
+
+    .hero-cta{
+      margin-top:30px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:12px;
+      justify-content:center;
+    }
+    .btn-lg{
+      padding:12px 22px;
+      font-size:.98rem;
+      border-radius:999px;
+    }
+
+    .btn--accent{
+      background:linear-gradient(135deg,#f6c34c,#f28b2b);
+      color:#111;
+      border:none;
+    }
+    .btn--accent:hover{
+      filter:brightness(1.05);
+    }
+
+    .hero-meta{
+      margin-top:22px;
+      font-size:.88rem;
+      color:#9ca3af;
+    }
+
+    .hero-season-card{
+      margin-top:40px;
+      padding:22px 18px;
+      border-radius:22px;
+      background:radial-gradient(circle at top,#1e293b 0,#020617 65%);
+      border:1px solid rgba(148,163,184,.35);
+      box-shadow:0 18px 40px rgba(0,0,0,.8);
+      text-align:center;
+    }
+    .hero-season-card h2{
+      margin:0 0 10px;
+    }
+    .hero-season-card p{
+      margin:0 0 16px;
+      color:#e5e7eb;
+      font-size:.95rem;
+    }
+
+    @media (max-width:640px){
+      .hero-main{padding:60px 0 40px;}
+    }
+
+    .hero-kicker-wrap{
+      position: relative;
+      display: inline-block;
+    }
+
+    .hero-fish-overlay{
+      position: absolute;
+      left: -15px;
+      top: 0%;
+      transform: translateY(-50%);
+      width: 105px;
+      height: 105px;
+      z-index: 10;
+      pointer-events: none;
+    }
+
+    /* ---- НОВІ БЛОКИ ГОЛОВНОЇ ---- */
+
+    .info-block{
+      max-width:720px;
+      margin:0 auto;
+      padding:40px 0;
+      color:#e5e7eb;
+      text-align:left;
+    }
+
+    .info-text{
+      max-width:none;
+      margin:12px 0 0;
+      color:#d1d5db;
+      font-size:.98rem;
+    }
+
+    .info-list,
+    .stage-list,
+    .advantages-list{
+      list-style:none;
+      padding:0;
+      margin:20px 0 0;
+      max-width:none;
+      text-align:left;
+      color:#e5e7eb;
+      font-size:.95rem;
+    }
+
+    .info-list li,
+    .stage-list li,
+    .advantages-list li{
+      padding:6px 0;
+      border-bottom:1px solid rgba(148,163,184,.18);
+    }
+
+    .final-highlight{
+      color:#facc15;
+      font-weight:600;
+    }
+
+    /* Заголовки секцій + бренд */
+    .section-title{
+      position:relative;
+      display:inline-block;      /* щоб лінія була по ширині тексту */
+      margin:0 0 18px;
+      font-size:1.35rem;
+      font-weight:700;
+      color:#e5e7eb;
+      padding-bottom:6px;
+    }
+
+    .section-title__brand{
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 40%,#d90429 100%);
+      -webkit-background-clip:text;
+      background-clip:text;
+      color:transparent;
+      font-weight:800;
+      letter-spacing:.04em;
+    }
+
+    .section-title::after{
+      content:"";
+      position:absolute;
+      left:0;
+      bottom:0;
+      width:100%;
+      height:2px;
+      border-radius:999px;
+      background:linear-gradient(90deg,#ffd700 0%,#ff8c00 50%,#d90429 100%);
+      box-shadow:0 0 6px rgba(255,180,0,.35);
+    }
+
+    /* Місія: чистий вертикальний стовпець по лівому краю */
+    .mission-cards{
+      margin-top:22px;
+      display:flex;
+      flex-direction:column;
+      gap:12px;
+    }
+
+    .lake-cards{
+      margin-top:22px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:12px;
+      justify-content:center;
+    }
+
+    .mission-card,
+    .lake-card{
+      padding:10px 16px;
+      border-radius:14px;
+      border:1px solid rgba(148,163,184,.35);
+      background:rgba(15,23,42,.9);
+      font-size:.9rem;
+    }
+
+    .mission-card{
+      width:100%;
+      margin:0;
+    }
+
+    .call-to-action{
+      text-align:left;
+    }
+
+    .call-to-action .btn{
+      margin-top:16px;
+    }
+
+    .section.highlight{
+      text-align:center;
+      padding:60px 0;
+    }
+
+    @media (max-width:640px){
+      .info-block{
+        padding:28px 0;
+      }
+    }
+
+    /* КНОПКА "УВІЙТИ" В ХЕДЕРІ */
+    .header-login{
+      margin-left:12px;
+      padding:6px 14px;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.6);
+      background:rgba(15,23,42,.9);
+      color:#e5e7eb;
+      font-size:.85rem;
+      text-decoration:none;
+      white-space:nowrap;
+    }
+    .header-login:hover{
+      border-color:#facc15;
+      color:#facc15;
+    }
+
+    /* Анімації */
+    @keyframes heroTitleFade{
+      0%{
+        opacity:0;
+        transform:translateY(22px);
+      }
+      100%{
+        opacity:1;
+        transform:translateY(0);
+      }
+    }
+
+    @keyframes heroLineFade{
+      0%{
+        opacity:0;
+        width:0;
+      }
+      100%{
+        opacity:1;
+        width:240px;
+      }
+    }
+
+    @keyframes heroGlow{
+      0%{
+        opacity:0;
+        transform:translate(-50%,-55%) scale(0.9);
+      }
+      100%{
+        opacity:1;
+        transform:translate(-50%,-50%) scale(1);
+      }
     }
   </style>
 </head>
-
-<body>
+<body class="home-page">
 
 <header class="header">
   <div class="container header__row">
@@ -113,74 +408,187 @@
       <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
     </nav>
 
+    <!-- ОНОВЛЕНА КНОПКА -->
+    <a href="/auth.html" class="header-login">Увійти</a>
+
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
-
 <main class="main">
-  <section class="container section hero">
+  <section class="section container hero-main">
 
-    <div class="kicker">
-      <span class="dot"></span>
-      <span>STOLAR CARP</span>
+    <div class="hero-kicker-wrap">
+      <img src="assets/fish-gold.png" class="hero-fish-overlay" alt="">
+      <div class="hero-kicker">
+        <span class="hero-kicker-text">Твій рівень. Твій трофей. Твоя перемога.</span>
+      </div>
     </div>
 
-    <h1 class="title-gradient">Риболовні змагання<br>STOLAR CARP</h1>
+    <h1 class="hero-title">STOLAR CARP</h1>
 
-    <p class="lead">
-      Офіційна сторінка турнірів STOLAR CARP: регламент, реєстрація, live-результати,
-      рейтинг сезонів і водойми. Усе оновлюється та підтримується в одному місці.
+    <p class="hero-subtitle">
+      STOLAR CARP — це поєднання:
+спортивної боротьби, дружньої атмосфери, драйву, командного духу та поваги до справжніх цінностей карпфішингу.
+
     </p>
 
-    <div class="hero-row">
-      <a class="btn btn--accent" href="live.html">Перейти в Live</a>
-      <span class="pill">Сайт: stolarcarp.netlify.app</span>
+    <div class="hero-tags">
+      <span class="hero-tag">Сезон 2026 · з Етапів + Фінал</span>
+      <span class="hero-tag">Зони A · B · C</span>
+      <span class="hero-tag">Live-таблиці та рейтинг онлайн</span>
     </div>
 
-    <div class="cards">
-      <a class="card card-link" href="rules.html">
-        <h3>Регламент</h3>
-        <p>Правила, формат, зважування, Big Fish, штрафи та умови участі.</p>
+    <div class="hero-cta">
+      <a class="btn btn--primary btn-lg" href="rules.html">
+        Переглянути регламент
       </a>
-
-      <a class="card card-link" href="register.html">
-        <h3>Реєстрація</h3>
-        <p>Подати заявку на активний етап / сезон. Працює з Firebase.</p>
+      <a class="btn btn--accent btn-lg" href="register.html">
+        Змагання
       </a>
-
-      <a class="card card-link" href="rating.html">
-        <h3>Рейтинг</h3>
-        <p>Загальний рейтинг по сезону та місця по етапах.</p>
+      <a class="btn btn--danger btn-lg" href="live.html">
+        Live протоколи
       </a>
+    </div>
 
-      <a class="card card-link" href="lakes.html">
-        <h3>Водойми</h3>
-        <p>Інформація про локації, фото, правила водойм і заїзд.</p>
-      </a>
 
-      <a class="card card-link" href="sponsors.html">
-        <h3>Спонсори</h3>
-        <p>Партнери турніру та підтримка розвитку карпфішингу.</p>
-      </a>
-
-      <a class="card card-link" href="events/index.html">
-        <h3>Архів</h3>
-        <p>Минулі події та результати, протоколи й сторінки етапів.</p>
+    <div class="hero-season-card">
+      <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
+      <p>
+        Слідкуй за всіма етапами та Фіналом в одному місці.
+        Архів, Live результати та підсумковий рейтинг команд.
+      </p>
+      <a href="events/season-2026.html" class="btn btn--primary btn-lg">
+        Переглянути сезон 2026
       </a>
     </div>
 
   </section>
+
+  <section class="section container info-block">
+    <h2 class="section-title">Хто може взяти участь?</h2>
+    <p class="info-text">
+      STOLAR CARP відкритий для всіх, хто живе карпфішингом та цінує не лише перемогу, а й шлях до неї. Професійний досвід не є обов’язковим — головне бажання розвиватися, змагатися, поважати природу та суперників .
+
+До участі запрошуються:
+  </p>
+
+    <ul class="info-list">
+      <li>• Команди з 2–3 учасників</li>
+      <li>• Початківці та аматори, які хочуть пройти свій перший турнір</li>
+      <li>• Досвідчені рибалки та спортивні команди</li>
+      <li>• Риболовні клуби та спільноти</li>
+      <li>• Ті, хто готовий пройти сезон із етапів та гранд-фіналом</li>
+    </ul>
+  </section>
+
+  <section class="section container info-block">
+    <h2 class="section-title">
+      Місія <span class="section-title__brand">STOLAR CARP</span>
+    </h2>
+    <p class="info-text">
+      Ми створили новий стандарт коропових турнірів в Україні: організований, 
+      прозорий та створений для розвитку та популяризацію карпфішингу як сучасний вид спорту. Кожне змагання — це не лише боротьба 
+      за кубок, а й зустріч однодумців на березі водойми.
+    </p>
+
+    <div class="mission-cards">
+      <div class="mission-card">✅ Інноваційна система відкритого Зважування</div>
+      <div class="mission-card">📊 Сучасний формат та live-таблиці</div>
+      <div class="mission-card">🤝 бережне ставлення до риби та природи</div>
+      <div class="mission-card">🎣 популяризації спортивного карпфішингу</div>
+    </div>
+  </section>
+
+  <section class="section container info-block">
+    <h2 class="section-title">Структура сезону</h2>
+    <p class="info-text">
+      Сезон STOLAR CARP складається з рейтингових етапів. 
+      Команди набирають бали на кожному з них, а за підсумком сезону найкращі потрапляють 
+      у Великий Фінал, де і визначається Чемпіон сезону.
+    </p>
+
+    <ul class="stage-list">
+      <li class="final-highlight">Фінал — битва найкращих команд за титул Чемпіона сезону STOLAR CARP</li>
+    </ul>
+  </section>
+
+  <section class="section container info-block">
+    <h2 class="section-title">Локації сезону</h2>
+    <p class="info-text">
+      Водойми обрані так, щоб поєднати комфортні умови та спортивний інтерес. 
+      Кожна локація має свій характер, що робить сезон різноманітним і непередбачуваним.
+    </p>
+
+    <div class="lake-cards">
+      <div class="lake-card">Лелехівка</div>
+      <div class="lake-card">...</div>
+      <div class="lake-card">...</div>
+    </div>
+
+    <a href="lakes.html" class="btn btn--primary" style="margin-top:20px;">
+      Переглянути водойми детальніше
+    </a>
+  </section>
+
+  <section class="section container info-block">
+    <h2 class="section-title">
+      Чому саме <span class="section-title__brand">STOLAR CARP</span>?
+    </h2>
+
+    <ul class="advantages-list">
+      <li>Незалежне суддівство та інноваційний цифровий контроль.</li>
+      <li>Онлайн-результати 24/7: live-протоколи та рейтинг команд</li>
+      <li>Жеребкування секторів у відкритому форматі</li>
+      <li>Big Fish, окремі номінації та фінальний кубок</li>
+      <li>Дружня атмосфера та сильна спільнота учасників</li>
+    </ul>
+  </section>
+
+  <section class="section container info-block call-to-action">
+    <h2 class="section-title">
+      Готовий до сезону <span class="section-title__brand">STOLAR CARP</span>?
+    </h2>
+    <p class="info-text">
+      Зареєструйте команду та приєднуйтесь до сезону STOLAR CARP.
+    </p>
+
+    <a href="register.html" class="btn btn--accent btn-lg">Подати заявку на участь</a>
+  </section>
+
 </main>
+
+<section class="section container highlight">
+  <h2 class="title-gradient">🎬 Ми в TikTok</h2>
+  <p>Дивись короткі відео з наших турнірів, зважувань та нагороджень!</p>
+  <a href="https://www.tiktok.com/@stolar.carp" class="btn btn--primary" target="_blank">
+    Перейти у TikTok
+  </a>
+</section>
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львів</div>
+    <div>
+      <span id="scAdminEntry" role="button" tabindex="0">
+        © 2025 STOLAR CARP · Львів
+      </span>
+    </div>
     <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
+      <a href="https://invite.viber.com/?g=...">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp">YouTube</a>
     </div>
   </div>
 </footer>
+
+<script>
+  (function(){
+    const el = document.getElementById("scAdminEntry");
+    if(!el) return;
+
+    el.addEventListener("click", () => {
+      window.location.href = "/admin.html";
+    });
+  })();
+</script>
 
 </body>
 </html>
