--- a/register.html
+++ b/register.html
@@ -273,7 +273,7 @@
       <a href="/lakes.html" class="nav__link">Водойми</a>
       <a href="/sponsors.html" class="nav__link">Спонсори</a>
       <a href="/events/index.html" class="nav__link">Архів</a>
-      <a href="/auth.html" class="nav__link">Акаунт</a>
+      <a href="/auth.html" class="nav__link">Мій кабінет</a>
     </nav>
 
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
