--- a/cabinet.html
+++ b/cabinet.html
@@ -368,6 +368,17 @@
           </div>
         </div>
       </div>
+      <!-- МОЯ УЧАСТЬ -->
+<div class="card">
+  <h2 class="card-title">Моя участь</h2>
+  <p class="card-subtitle">
+    Показано лише ті змагання / етапи, куди вже подана заявка від вашої команди.
+  </p>
+
+  <div id="myCompetitions">
+    <div class="cabinet-small-muted">Завантаження участі…</div>
+  </div>
+</div>
 
       <!-- ДОСЯГНЕННЯ -->
       <div class="card">
