--- a/cabinet.html
+++ b/cabinet.html
@@ -438,6 +438,7 @@
 
 <!-- SP 3: Кабінет -->
 <script src="assets/js/cabinet.js"></script>
+  <script src="assets/js/my_participation.js"></script>
 
 </body>
 </html>
