--- a/cabinet.html
+++ b/cabinet.html
@@ -438,7 +438,9 @@
 
 <!-- SP 3: Кабінет -->
 <script src="assets/js/cabinet.js"></script>
-  <script src="assets/js/my_participation.js"></script>
+
+<!-- SP 4: Моя участь -->
+<script src="assets/js/my_participation.js"></script>
 
 </body>
 </html>
