--- a/cabinet.html
+++ b/cabinet.html
@@ -326,7 +326,7 @@
       <div class="card card--soft">
         <h2 class="card-title">Команда та профіль</h2>
         <p class="card-subtitle">
-          Ваш акаунт, команда та базові дані для участі в турнірі.
+          Ваш акаунт, команда та базові дані.
         </p>
 
         <div class="team-header">
@@ -382,7 +382,7 @@
       <div class="card">
         <h2 class="card-title">Досягнення команди</h2>
         <p class="card-subtitle">
-          Підсумки виступів у сезоні STOLAR CARP та Big Fish.
+          Підсумки виступів у сезоні STOLAR CARP 
         </p>
 
         <div class="stats-grid">
@@ -407,7 +407,7 @@
         </div>
 
         <p class="cabinet-small-muted">
-          Детальна таблиця результатів буде додана після інтеграції з адмінкою DK PRIME.
+          Детальна таблиця.
         </p>
       </div>
 
