--- a/cabinet.html
+++ b/cabinet.html
@@ -439,6 +439,9 @@
 
 <!-- SP 4: Моя участь -->
 <script src="assets/js/my_participation.js"></script>
+  
+<!-- SP 4: Досягнення команди -->
+<script src="assets/js/cabinet_achievements.js"></script>
 
 </body>
 </html>
