--- a/live.html
+++ b/live.html
@@ -307,10 +307,10 @@
         <span>Live протокол</span>
       </div>
 
-      <h1 class="title-gradient">Результати активного етапу</h1>
+      <h1 class="title-gradient">Результати активних змагань</h1>
 
       <div class="live-stage-pill">
-        <span>Поточний етап: <strong id="liveStageName">—</strong></span>
+        <span>Змагання: <strong id="liveStageName">—</strong></span>
       </div>
 
       <div class="bf-toggle">
@@ -339,11 +339,10 @@
           </table>
         </div>
 
-        <p class="live-note">Учасники беруться з адмінки жеребкування.</p>
       </div>
 
       <p class="lead" style="max-width:720px;margin-top:10px;">
-        W = <b>к-сть / вага</b>. Дані оновлюються автоматично з Firebase.
+        W = <b>к-сть / вага</b> Дані оновлюються автоматично
       </p>
     </div>
 
@@ -363,7 +362,7 @@
         </div>
 
         <div class="card">
-          <h2 style="margin-top:0;">Загальна таблиця</h2>
+          <h2 style="margin-top:0;">Таблиця зважувань</h2>
 
           <div class="table-wrap" style="overflow-x:auto;">
             <table class="table table-sm" id="totalTable">
@@ -375,17 +374,12 @@
                   <th>W2</th>
                   <th>W3</th>
                   <th>W4</th>
-                  <th>Разом</th>
-                  <th>BIG</th>
-                  <th>Вага</th>
-                  <th>Місце</th>
                 </tr>
               </thead>
               <tbody></tbody>
             </table>
           </div>
 
-          <p class="live-note">W1–W4 — зважування. Разом — всі риби та вага.</p>
         </div>
       </div>
 
