--- a/admin.html
+++ b/admin.html
@@ -241,12 +241,16 @@
       <!-- MENU -->
       <div class="admin-card">
         <div class="stack">
-          <button class="btn btn--primary" id="btnOpenCreate">1) Створити змагання</button>
-          <button class="btn btn--accent"  id="btnOpenEdit">2) Редагувати змагання</button>
+  <button class="btn btn--primary" id="btnOpenCreate">1) Створити змагання</button>
+  <button class="btn btn--accent"  id="btnOpenEdit">2) Редагувати змагання</button>
 
-          <a class="btn btn--primary" href="admin-registrations.html">3) Реєстрація команд</a>
-          <a class="btn btn--accent"  href="admin-draw.html">4) Жеребкування</a>
-          <a class="btn btn--danger"  href="admin-weigh.html">5) Зважування (судді/адмін)</a>
+  <a class="btn btn--primary" href="admin-registrations.html">3) Реєстрація команд</a>
+  <a class="btn btn--accent"  href="admin-draw.html">4) Жеребкування</a>
+
+  <a class="btn btn--danger"  href="admin-weigh.html">5) Зважування (адмін)</a>
+
+  <!-- 6) НОВЕ -->
+  <a class="btn btn--primary" href="admin-accounts.html">6) Акаунт STOLAR CARP</a>
         </div>
       </div>
 
